# haifisch

./: CMakeLists.txt  README.md  main.cpp
haifisch/: matrix.hpp
test/: CMakeLists.txt  main.cpp  tests.hpp
util/: func_benchmark.hpp  logger.hpp
